<resources>
    <string name="app_name">K23411TApp</string>
    <string name="str_university">University of Economics and Law</string>
    <string name="str_your_major">Show your Major</string>
    <string name="str_my_major">Data Science!!!</string>
    <string name="str_login_system">LOGIN SYSTEM</string>
    <string name="str_hint_username">Enter your user name here</string>
    <string name="str_username">User name:</string>
    <string name="str_password">Password:</string>
    <string name="str_hint_password">Enter your password here</string>
    <string name="str_login">Login</string>
    <string name="str_exit">Exit</string>
    <string name="str_login_success">LOGIN SUCCESSFUL!!!</string>
    <string name="str_login_failed">LOGIN FAILED!!!</string>
    <string name="str_mc">MC</string>
    <string name="str_mr">MR</string>
    <string name="str_mplus">M+</string>
    <string name="str_mminus">M-</string>
    <string name="str_ms">MS</string>
    <string name="str_m">M</string>
    <string name="str_open_calculator_app">Open Calculator App</string>
    <string name="str_save_login_infor">Save login information</string>
    <string name="str_login_role">Login Role:</string>
    <string name="str_role_employee">Employee</string>
    <string name="str_role_administrator">Administrator</string>
    <string name="str_confirm_exit_title">Confirm Exit</string>
    <string name="str_confirm_exit_message">Are you want to exit?</string>
    <string name="str_confirm_exit_yes">CÓ</string>
    <string name="str_confirm_exit_no">KHÔNG</string>
    <string name="str_confirm_exit">Are you sure you want to exit?</string>
    <string name="str_id">ID:</string>
    <string name="str_name">Name:</string>
    <string name="str_phone_number">Phone Number:</string>
    <string name="str_save">Save</string>
    <string name="str_clear">Clear</string>
    <string name="str_delete">Delete</string>
    <string name="str_confirm_delete_title">Confirm Delete</string>
    <string name="str_confirm_delete_message">Are you sure you want to delete this employee?</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_error_id_empty">Please enter ID</string>
    <string name="str_toast_select_employee">Please select an employee to delete</string>
    <string name="str_toast_delete_success">Deleted successfully</string>
    <string name="str_department">Department</string>
    <string name="str_employee">Employee(s):</string>
    <string name="str_birthPlace">Birth Place</string>
    <string name="str_add_new_employee">Add New Employee</string>
    <string name="str_please_input_all_info">Please enter all information below</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_save_now">Save Now</string>
    <string name="str_order_management">Order Management</string>
    <string name="str_from_date">From Date:</string>
    <string name="str_to_date">To Date:</string>
    <string name="str_welcome_app">Welcome to Smart App</string>
    <string name="str_control_center">Control Center</string>
    <string name="str_orders">Order Management</string>
    <string name="str_categories">Category Management</string>
    <string name="str_products">Product Management</string>
    <string name="str_calculator">Calculator</string>
    <string name="str_say_hello">Say Hello</string>
    <string name="str_exit_app">Exit App</string>
    <string name="str_my_major_title">My Major</string>
    <string name="str_my_contact">My Contact Management</string>
    <string name="str_sms_spyware">SMS Spyware</string>
    <string name="str_multi_thread">Multi Thread Demo</string>
    <string name="str_multi_thread_object">Multi Thread Object Demo</string>
    <string name="str_order_status_all">All</string>
    <string name="str_order_status_completed">Completed</string>
    <string name="str_order_status_not_payment">Not Payment</string>
    <string name="str_order_status_on_logistics">On logistics</string>
    <string name="str_order_status_complaint">Complaint</string>
    <string name="str_add_new_category">Add new category</string>
    <string name="str_category_statistics">Category statistic</string>
    <string name="str_category_id">Category ID</string>
    <string name="str_category_name">Category Name</string>
    <string name="str_description">Description</string>
    <string name="str_phone_incoming">Phone Incoming</string>
    <string name="str_date_delivery">Date Delivery</string>
    <string name="str_message_body">Message Body</string>
    <string name="str_number_button">Number Of Button</string>
    <string name="str_create_button">Create Button</string>
    <string name="str_number_of_product">Number of product</string>
    <string name="str_download_product">Download product</string>
    <string name="str_play_audio1">Play Audio 1</string>
    <string name="str_play_audio2">Play Audio 2</string>
    <string name="str_insert_contact">Insert Contact</string>
    <string name="str_contact_id">Contact ID:</string>
    <string name="str_contact_name">Contact Name:</string>
    <string name="str_email">Email:</string>
    <string name="str_back">Back</string>
    <string name="str_update">Update</string>
    <string-array name="arr_province">
        <item>TP. Hà Nội</item>
        <item>TP. Hồ Chí Minh</item>
        <item>TP. Hải Phòng</item>
        <item>TP. Đà Nẵng</item>
        <item>TP. Cần Thơ</item>
        <item>TP. Huế</item>
        <item>Cao Bằng</item>
        <item>Điện Biên</item>
        <item>Hà Tĩnh</item>
        <item>Lai Châu</item>
        <item>Lạng Sơn</item>
        <item>Nghệ An</item>
        <item>Quảng Ninh</item>
        <item>Thanh Hóa</item>
        <item>Sơn La</item>
        <item>Thái Nguyên</item>
        <item>Tuyên Quang</item>
        <item>Lào Cai</item>
        <item>Phú Thọ</item>
        <item>Bắc Ninh</item>
        <item>Hưng Yên</item>
        <item>Ninh Bình</item>
        <item>Quảng Trị</item>
        <item>Quảng Ngãi</item>
        <item>Gia Lai</item>
        <item>Khánh Hòa</item>
        <item>Lâm Đồng</item>
        <item>Tây Ninh</item>
        <item>Đồng Nai</item>
        <item>Vĩnh Long</item>
        <item>An Giang</item>
        <item>Đồng Tháp</item>
        <item>Cà Mau</item>
        <item>Đắk Lắk</item>
    </string-array>
</resources>