<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtCateID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_category_id"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCateName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_category_name"
        android:textColor="@color/green"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtCategoryDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_description"
        android:textColor="@color/design_default_color_primary_dark"
        android:textStyle="italic" />
</LinearLayout>